--- a/deploy/everoute-agent/role.yaml
+++ b/deploy/everoute-agent/role.yaml
@@ -52,7 +52,7 @@ rules:
 - apiGroups:
     - activeprobe.everoute.io
   resources:
-    - activeprobes
+    - activeprobes activeprobes/status
   verbs:
     - patch
     - create
