--- a/deploy/crds/activeprobe.everoute.io_activeprobes.yaml
+++ b/deploy/crds/activeprobe.everoute.io_activeprobes.yaml
@@ -204,35 +204,40 @@ spec:
                         type: object
                     type: object
                 type: object
+              failedTimes:
+                format: int32
+                type: integer
               reason:
                 type: string
               results:
-                items:
-                  properties:
-                    agentname:
-                      description: AgentProbeRecord map[string]*AgentProbeResult
-                      type: string
-                    numberoftimes:
-                      format: int32
-                      type: integer
-                    agentprobestate:
-                      type: string
-                    agentprobepath:
-                      items:
-                        properties:
-                          action:
-                            type: string
-                          tracepoint:
-                            type: string
-                        type: object
-                      type: array
-                  type: object
-                type: array
+                additionalProperties:
+                  items:
+                    properties:
+                      agentprobepath:
+                        items:
+                          properties:
+                            action:
+                              type: string
+                            tracepoint:
+                              type: string
+                          type: object
+                        type: array
+                      agentprobestate:
+                        type: string
+                      numberoftimes:
+                        format: int32
+                        type: integer
+                    type: object
+                  type: array
+                type: object
               startTime:
                 format: date-time
                 type: string
               state:
                 type: string
+              succeedTimes:
+                format: int32
+                type: integer
               tag:
                 type: integer
             required:
