--- a/deploy/crds/activeprobe.everoute.io_activeprobes.yaml
+++ b/deploy/crds/activeprobe.everoute.io_activeprobes.yaml
@@ -210,6 +210,8 @@ spec:
                 additionalProperties:
                   items:
                     properties:
+                      AgentNameTemp:
+                        type: string
                       agentprobepath:
                         items:
                           properties:
