--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -217,6 +217,9 @@ spec:
                           properties:
                             action:
                               type: string
+                            inport:
+                              format: int32
+                              type: integer
                             tracepoint:
                               type: string
                           type: object
