--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -213,6 +213,8 @@ spec:
                 additionalProperties:
                   items:
                     properties:
+                      agentProbeSendTimes:
+                        type: integer
                       agentprobepath:
                         items:
                           properties:
