--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: clean old eveorute
-        run: sudo skaffold run -d=harbor.smartx.com/everoute -f skaffold-clean.yaml
+        run: sudo skaffold run -d=registry.smtx.io/everoute -f skaffold-clean.yaml
 
       - name: wait clean process ready
         run: kubectl wait po -n kube-system --for=condition=Ready=True -l app=everoute -l component=everoute-clean --timeout=3m
@@ -76,7 +76,7 @@ jobs:
         run: kubectl delete -f hack/clean.yaml
 
       - name: build everoute and deploy
-        run: sudo skaffold run -d=harbor.smartx.com/everoute
+        run: sudo skaffold run -d=registry.smtx.io/everoute
 
       - name: wait everoute ready
         run: bash hack/check_ready.sh
