feat(endpoint): add new endpoint type with static IPs and dynamic agents

--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -627,6 +627,7 @@ spec:
                 enum:
                 - dynamic
                 - static
+                - static-ip
                 type: string
               vid:
                 description: VID describe the endpoint in which VLAN
