--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -211,8 +211,8 @@ spec:
                         type: string
                       type: array
                     description: 'ExtendMatchLabels allows match labels with the same
-                      key but different value. e.g. {key: [value1, value2]} matches
-                      labels: {key: value1, key: value2}'
+                      key but different value. e.g. {key: [v1, v2]} matches labels:
+                      {key: v1, key: v2} and {key: v1, key: v2, key: v3}'
                     type: object
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -856,8 +856,9 @@ spec:
                               type: string
                             type: array
                           description: 'ExtendMatchLabels allows match labels with
-                            the same key but different value. e.g. {key: [value1,
-                            value2]} matches labels: {key: value1, key: value2}'
+                            the same key but different value. e.g. {key: [v1, v2]}
+                            matches labels: {key: v1, key: v2} and {key: v1, key:
+                            v2, key: v3}'
                           type: object
                         matchExpressions:
                           description: matchExpressions is a list of label selector
@@ -966,8 +967,8 @@ spec:
                                   type: array
                                 description: 'ExtendMatchLabels allows match labels
                                   with the same key but different value. e.g. {key:
-                                  [value1, value2]} matches labels: {key: value1,
-                                  key: value2}'
+                                  [v1, v2]} matches labels: {key: v1, key: v2} and
+                                  {key: v1, key: v2, key: v3}'
                                 type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
@@ -1169,8 +1170,8 @@ spec:
                                   type: array
                                 description: 'ExtendMatchLabels allows match labels
                                   with the same key but different value. e.g. {key:
-                                  [value1, value2]} matches labels: {key: value1,
-                                  key: value2}'
+                                  [v1, v2]} matches labels: {key: v1, key: v2} and
+                                  {key: v1, key: v2, key: v3}'
                                 type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
@@ -1347,8 +1348,8 @@ spec:
                                   type: array
                                 description: 'ExtendMatchLabels allows match labels
                                   with the same key but different value. e.g. {key:
-                                  [value1, value2]} matches labels: {key: value1,
-                                  key: value2}'
+                                  [v1, v2]} matches labels: {key: v1, key: v2} and
+                                  {key: v1, key: v2, key: v3}'
                                 type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
@@ -1550,8 +1551,8 @@ spec:
                                   type: array
                                 description: 'ExtendMatchLabels allows match labels
                                   with the same key but different value. e.g. {key:
-                                  [value1, value2]} matches labels: {key: value1,
-                                  key: value2}'
+                                  [v1, v2]} matches labels: {key: v1, key: v2} and
+                                  {key: v1, key: v2, key: v3}'
                                 type: object
                               matchExpressions:
                                 description: matchExpressions is a list of label selector
