--- a/deploy/chart/crds/group.everoute.io_endpointgroups.yaml
+++ b/deploy/chart/crds/group.everoute.io_endpointgroups.yaml
@@ -79,8 +79,8 @@ spec:
                         type: string
                       type: array
                     description: 'ExtendMatchLabels allows match labels with the same
-                      key but different value. e.g. {key: [value1, value2]} matches
-                      labels: {key: value1, key: value2}'
+                      key but different value. e.g. {key: [v1, v2]} matches labels:
+                      {key: v1, key: v2} and {key: v1, key: v2, key: v3}'
                     type: object
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
