--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -148,7 +148,20 @@ spec:
     singular: endpointgroup
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.endpointSelector
+      name: EndpointSelector
+      type: string
+    - jsonPath: .spec.namespaceSelector
+      name: NamespaceSelector
+      type: string
+    - jsonPath: .spec.namespace
+      name: Namespace
+      type: string
+    - jsonPath: .spec.endpoint
+      name: Endpoint
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -303,6 +316,7 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
@@ -330,7 +344,14 @@ spec:
     singular: groupmembers
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .revision
+      name: Revision
+      type: string
+    - jsonPath: .groupMembers[*].ips
+      name: Members
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -388,6 +409,7 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
