--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1999,6 +1999,8 @@ spec:
           securityContext:
             privileged: true
           volumeMounts:
+            - name: everoute-run
+              mountPath: /var/run/everoute/
             - name: everoute-agent
               mountPath: /var/lib/everoute/
             - name: cni-bin
@@ -2050,6 +2052,8 @@ spec:
             successThreshold: 1
             failureThreshold: 3
           volumeMounts:
+            - name: everoute-run
+              mountPath: /var/run/everoute/
             - name: everoute-agent
               mountPath: /var/lib/everoute/
             - name: everoute-config
@@ -2083,6 +2087,9 @@ spec:
           name: everoute-config
         - name: openvswitch
           emptyDir: {}
+        - name: everoute-run
+          hostPath:
+            path: /var/run/everoute
         - name: tmp
           emptyDir: {}
         - hostPath:
